# cz_cryoet

./: .gitignore  README.md  data-visualization.ipynb  pyproject.toml
misc/: cz_competition_metric.ipynb  overview.ipynb
misc/other_peoples_notebooks/: overview.ipynb  temp-blob-detector-inference-notebook.ipynb
preprocessing/: 01_preprocessing.ipynb  pyproject.toml
