[project]
name = "cz-cryoet"
version = "0.1.0"
description = ""
authors = [
    {name = "aditya1101",email = "adityamrao95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<=3.12"
dependencies = [
    "tensorflow (>=2.15.0)",
    "pandas (>=2.2.0)",
    "tensorflow-decision-forests (>=1.10.0)",
    "scikit-learn (>=1.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

