[project]
name = "cz-cryoet-preprocessing"
version = "0.1.0"
description = ""
authors = [
    {name = "aditya1101",email = "adityamrao95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "numpy (<2.0.0)",
    "scipy (!=1.13.1)",
    "napari (>=0.5.3)",
    "zarr (>=2.18.3)",
    "monai (>=1.3.2)",
    "cryoet-data-portal (==4.0.0)",
    "s3fs (>=2024.6.0)",
    "trimesh (>=4.4.0)",
    "scikit-image (>=0.24.0)",
    "ome-zarr (>=0.8.0)",
    "copick (>=0.6.0)",
    "copick-utils @ git+https://github.com/copick/copick-utils.git",
    "h5py (>=3.11.0)",
    "morphospaces (>=0.0.4)",
    "copick-torch @ git+https://github.com/copick/copick-torch.git",
    "gql (>=2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

